--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landed by HTML5 UP</title>
+		<title>WORLD POWER FIGHTER BY TEAM 3AGOUNOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,10 +19,12 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">TEAM 3AGOUNOS</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="index.html" class="button special">Home</a></li>
+<!--
+
 							<li>
 								<a href="#">Layouts</a>
 								<ul>
@@ -42,6 +44,7 @@
 							</li>
 							<li><a href="elements.html">Elements</a></li>
 							<li><a href="#" class="button special">Sign Up</a></li>
+-->
 						</ul>
 					</nav>
 				</header>
@@ -50,9 +53,9 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>WORLD POWER FIGHTER</h2>
+							<p>"Produit Inexistant" - QuiEstLeMoinsCher.com <br />
+							"Va acheter le pain" - Ma Maman </p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
