--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
 							<p>"Produit Inexistant" - QuiEstLeMoinsCher.com <br />
 							"Va acheter le pain" - Ma Maman </p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="images/altlogo.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/altlogo.png" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Plus qu'un jeu: Une REVOLUTION</h2>
+										<p>Produit de l'ensemble du travail d'une équipe de réel professionel, WPF veut révolutionner l'image du jeu dans le monde entier.</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
