--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 							<p>"Produit Inexistant" - QuiEstLeMoinsCher.com <br />
 							"Va acheter le pain" - Ma Maman </p>
 						</header>
-						<span class="image"><img src="images/altlogo.png" alt="" /></span>
+						<span class="image"><img src="images/altLogo.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/altlogo.png" alt="" /></span>
+					<span class="image fit main"><img src="images/altLogo.png" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
