--- a/index.html
+++ b/index.html
@@ -70,16 +70,18 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Plus qu'un jeu: Une REVOLUTION</h2>
+										<h2>Plus qu'un jeu : Une REVOLUTION</h2>
 										<p>Produit de l'ensemble du travail d'une équipe de réel professionel, WPF veut révolutionner l'image du jeu dans le monde entier.</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>Les initiales de notre projets signifie World Power Fighter. Le concept est simple,  2 à 4 combattants aux pouvoirs tous différents, se battent sur une map aléatoire dans le but d'être le dernier survivant. Le jeu se veut rapide et délirant. Chaque personnage possède trois vies et doit éjecter ses adversaires de la map, mais attention toutes les 45 secondes(le temps sera surement adapter une fois les premiers tests fait) la map change! Plusieurs items apparaissent de manière aléatoire sur la map ce qui ajoutera un peu de sel à la partie!
+Attention donc à toujours rester sur ses gardes quand on se bat! Même sur sa propre map! Car en effet le jeu permet de créer sa propre map à l'aide d'un menu proposée avant chaque partie et de l'incorporer dans les map aléatoire!
+
+Les pouvoirs disponibles seront de toutes sortes : Super Rapidité, Levitation,
+Teleportation, Telekinesie...
+
+Enfin trois classes de personnages seront disponible pour être le plus imprévisible  possible  face à ses adversaires! Chacune des classes auront donc  leurs propres caractéristiques .</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
 									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
@@ -130,8 +132,8 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>L'EQUIPE 3AGOUNOS</h2>
+							<p>Fort de leur passé, ils arrivent plus fort que si ils n'étaient pas venu!</p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
@@ -179,8 +181,8 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Nous Contacter</h2>
+							<p>(Si c'est pour nous acheter, ça sert à rien : On est pas des vendus (sauf si y'a des BN en jeux))</p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
@@ -202,7 +204,10 @@
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved. TEAM 3AGOUNOS</li>
+						<!--
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						-->
 					</ul>
 				</footer>
 
