--- a/index.html
+++ b/index.html
@@ -78,17 +78,12 @@
 									<p>Les initiales de notre projets signifie World Power Fighter. Le concept est simple,  2 à 4 combattants aux pouvoirs tous différents, se battent sur une map aléatoire dans le but d'être le dernier survivant. Le jeu se veut rapide et délirant. Chaque personnage possède trois vies et doit éjecter ses adversaires de la map, mais attention toutes les 45 secondes(le temps sera surement adapter une fois les premiers tests fait) la map change! Plusieurs items apparaissent de manière aléatoire sur la map ce qui ajoutera un peu de sel à la partie!
 Attention donc à toujours rester sur ses gardes quand on se bat! Même sur sa propre map! Car en effet le jeu permet de créer sa propre map à l'aide d'un menu proposée avant chaque partie et de l'incorporer dans les map aléatoire!
 
-Les pouvoirs disponibles seront de toutes sortes : Super Rapidité, Levitation,
+								</div>
+								<div class="4u$ 12u$(medium)">
+									<p>Les pouvoirs disponibles seront de toutes sortes : Super Rapidité, Levitation,
 Teleportation, Telekinesie...
 
 Enfin trois classes de personnages seront disponible pour être le plus imprévisible  possible  face à ses adversaires! Chacune des classes auront donc  leurs propres caractéristiques .</p>
-								</div>
-								<div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
 								</div>
 							</div>
 						</div>
