--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
 								</div>
 								<div class="4u 12u$(medium)">
 									<p>Les initiales de notre projets signifie World Power Fighter. Le concept est simple,  2 à 4 combattants aux pouvoirs tous différents, se battent sur une map aléatoire dans le but d'être le dernier survivant. Le jeu se veut rapide et délirant. Chaque personnage possède trois vies et doit éjecter ses adversaires de la map, mais attention toutes les 45 secondes(le temps sera surement adapter une fois les premiers tests fait) la map change! Plusieurs items apparaissent de manière aléatoire sur la map ce qui ajoutera un peu de sel à la partie!
-Attention donc à toujours rester sur ses gardes quand on se bat! Même sur sa propre map! Car en effet le jeu permet de créer sa propre map à l'aide d'un menu proposée avant chaque partie et de l'incorporer dans les map aléatoire!
 
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>Les pouvoirs disponibles seront de toutes sortes : Super Rapidité, Levitation,
+									<p>Attention donc à toujours rester sur ses gardes quand on se bat! Même sur sa propre map! Car en effet le jeu permet de créer sa propre map à l'aide d'un menu proposée avant chaque partie et de l'incorporer dans les map aléatoire!
+
+										Les pouvoirs disponibles seront de toutes sortes : Super Rapidité, Levitation,
 Teleportation, Telekinesie...
 
 Enfin trois classes de personnages seront disponible pour être le plus imprévisible  possible  face à ses adversaires! Chacune des classes auront donc  leurs propres caractéristiques .</p>
@@ -132,10 +133,11 @@ Enfin trois classes de personnages seront disponible pour être le plus imprévi
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
+
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-area-chart"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+									<span class="image fit main"><img src="images/altLogo.png" alt="" /></span>
+									<h3>Rayane Amrouche - BigR</h3>
+									<p>J'ai un peu programmé avant Epita et j'ai toujours voulu créer un jeu de manière concrète. Je maitrise un peu Unity et C# et j'ai déjà fait quelques petits jeux pour smartphone mais c'est maintenant l'occasion pour moi de créer un jeu et de le presenter sérieusement. J'aime bien les jeux Nintendo et leur côté fun et délirant. Je compte m'en inspirer pour créer un jeu largement orienté multijoueur pour des parties entre amis avec un maximum de fun. Chef de projet, Je ferai tout le nécessaire pour que le projet soit mené à bien.</p>
 								</section>
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="icon alt major fa-comment"></span>
