--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/altLogo.png" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/altLogo.png" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -113,7 +113,7 @@ Enfin trois classes de personnages seront disponible pour être le plus imprévi
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="ScreenShot_20170225190915.png" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/ScreenShot_20170225190915.png" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Interdum felis blandit praesent sed augue</h2>
