--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ J'apprecie breaucoup le travail en groupe, je trouve cela passionant de s'unir p
 						</div>
 						<footer class="major">
 							<ul class="actions">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
+								<li><a href="#" class="button">REMONTER</a></li>
 							</ul>
 						</footer>
 					</div>
@@ -193,7 +193,7 @@ J'apprecie breaucoup le travail en groupe, je trouve cela passionant de s'unir p
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved. TEAM 3AGOUNOS</li>
+						<li>&copy; WORLD POWER FIGHTER All rights reserved. TEAM 3AGOUNOS</li>
 						<!--
 						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						-->
