--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="banner">
+				<section id="spotlight style1">
 					<div class="content">
 						<header>
 							<h2>WORLD POWER FIGHTER</h2>
@@ -147,7 +147,7 @@ Enfin trois classes de personnages seront disponible pour être le plus imprévi
 									<h3>Oswald Benoit - Lil'Oso</h3>
 									<p>Je suis quelqu'un de très sportif , en effet je pratique le basketball depuis plus de dix ans maintenant. 
 Ce sport m'a apporté beaucoup de chose au fil des années et je pense que l'aspect collectif du basket m'aidera a gérer les quelques accrochages qui peuvent ce presenter lorsque l'on travail en groupe sur un projet comme celui-ci.
-Mes seul connaissance en programmation sont celles que l'EPITA  m'a apportées durant le semestre 1 et je compte bien me servir de ce projet pour en apprendre un maximum sur le c\# et unity .</p>
+Mes seul connaissance en programmation sont celles que l'EPITA  m'a apportées durant le semestre 1 et je compte bien me servir de ce projet pour en apprendre un maximum sur le c# et unity .</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="image fit main"><img src="images/altLogo.png" alt="" /></span>
