--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</header>
 
 			<!-- Banner -->
-				<section id="spotlight style1">
+				<section id="banner">
 					<div class="content">
 						<header>
 							<h2>WORLD POWER FIGHTER</h2>
