--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 							<li>
 								<a href="#">Layouts</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="Download.html">Download</a></li>
 									<li>
 										<a href="#">Submenu</a>
 										<ul>
@@ -42,9 +40,9 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button special">Sign Up</a></li>
 -->
+							<li><a href="Download.html">Elements</a></li>
+
 						</ul>
 					</nav>
 				</header>
@@ -100,12 +98,12 @@ Enfin trois classes de personnages seront disponible pour être le plus imprévi
 					<span class="image fit main"><img src="images/ScreenShot_20170225185146.png" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>Unity</h2>
+							<p>Afin de réaliser notre jeux, nous avons utilisé le moteur Unity.</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>Le jeu est actuellement en phase de béta test afin d'y incorporer une réel experience multijoueur. Toutefois vous pouvez dés à présent tester le jeu dans le menu Download</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="Download.html" class="button">Plus</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -116,12 +114,12 @@ Enfin trois classes de personnages seront disponible pour être le plus imprévi
 					<span class="image fit main bottom"><img src="images/ScreenShot_20170225190915.png" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Enfin Notre Jeu!!</h2>
+							<p>Ce jeu est né d'une volonté et d'un rêve de groupe.</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>Le défi est de réaliser un jeu à la hauteur de nos attentes : c'est à dire le plus fun possible. Pour cela le gameplay est primordial. Néanmoins le coté graphique ne doit pas être laissé pour compte!</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">REMONTER</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
