--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<h1 id="logo"><a href="index.html">TEAM 3AGOUNOS</a></h1>
 					<nav id="nav">
 						<ul>
+							<li><a href="Download.html">Download</a></li>
 							<li><a href="index.html" class="button special">Home</a></li>
 <!--
 
@@ -41,7 +42,6 @@
 								</ul>
 							</li>
 -->
-							<li><a href="Download.html">Elements</a></li>
 
 						</ul>
 					</nav>
