--- a/Download.html
+++ b/Download.html
@@ -57,8 +57,10 @@
 						<!-- Content -->
 							<section id="content">
 								<li><a href="cahier-des-charges.zip" class="button">CAHIER DES CHARGES</a></li>
+								<p> </p>
 								<li><a href="cahier-des-charges.zip" class="button">RAPPORT DE SOUTENANCE 1</a></li>
-								<li><a href="GAME.zip" class="button">JEU (0.1)</a></li>
+								<p> </p>
+								<li><a href="Game.rar" class="button">JEU (0.1)</a></li>
 
 							</section>
 
