--- a/Download.html
+++ b/Download.html
@@ -60,7 +60,7 @@
 								<p> </p>
 								<li><a href="cahier-des-charges.zip" class="button">RAPPORT DE SOUTENANCE 1</a></li>
 								<p> </p>
-								<li><a href="Game.rar" class="button">JEU (0.1)</a></li>
+								<li><a href="GAME.rar" class="button">JEU (0.1)</a></li>
 
 							</section>
 
