--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@ Enfin trois classes de personnages seront disponible pour être le plus imprévi
 								<section class="4u 6u$(medium) 12u$(xsmall)">
 									<span class="image fit main"><img src="images/altLogo.png" alt="" /></span>
 									<h3>Oswald Benoit - Lil'Oso</h3>
-									<p>Je suis quelqu'un de très sportif , en effet je pratique le basketball depuis plus de dix ans maintenant. 
-Ce sport m'a apporté beaucoup de chose au fil des années et je pense que l'aspect collectif du basket m'aidera a gérer les quelques accrochages qui peuvent ce presenter lorsque l'on travail en groupe sur un projet comme celui-ci.
-Mes seul connaissance en programmation sont celles que l'EPITA  m'a apportées durant le semestre 1 et je compte bien me servir de ce projet pour en apprendre un maximum sur le c# et unity .</p>
+									<p>Mes seul connaissance en programmation sont celles que l’EPITA m’a apportées durant le semestre 1 et je compte bien me servir de ce projet pour en apprendre un maximum sur le c# et unity.
+									J’ai toujours été attiré par les jeux video et plus particulièrement ceux de combats . 
+C’est pourquoi avoir comme premier projet a l’EPITA la création d’un jeu video et qui plus est un jeu de combat , me motive pour travailler d’autant plus en programmation et de manière général dans mon cursus .</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
 									<span class="image fit main"><img src="images/altLogo.png" alt="" /></span>
