--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="Download.html">Download</a></li>
+							<li><a href="Forum.html">Forum</a></li>
 							<li><a href="index.html" class="button special">Home</a></li>
 <!--
 
