--- a/Download.html
+++ b/Download.html
@@ -23,7 +23,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="Download.html">Download</a></li>
+							<li><a href="Forum.html">Forum</a></li>
 							<li><a href="index.html" class="button special">Home</a></li>
+<!--
 <!--
 							<li>
 								<a href="#">Layouts</a>
@@ -60,7 +62,9 @@
 								<p> </p>
 								<li><a href="untitled (10).pdf" class="button">RAPPORT DE SOUTENANCE 1</a></li>
 								<p> </p>
-								<li><a href="Game.rar" class="button">JEU (0.1)</a></li>
+								<li><a href="untitled (11).pdf" class="button">RAPPORT DE SOUTENANCE 2</a></li>
+								<p> </p>
+								<li><a href="FINAL.rar" class="button">JEU (0.1)</a></li>
 
 							</section>
 
