--- a/Forum.html
+++ b/Forum.html
@@ -23,8 +23,8 @@
 					<nav id="nav">
 						<ul>
 							
-									<li><a href="Forum.html">Right Sidebar</a></li>
-									<li><a href="Download.html">No Sidebar</a></li>
+									<li><a href="Forum.html">Forum</a></li>
+									<li><a href="Download.html">Download</a></li>
 								
 							<li><a href="index.html" class="button special">Home</a></li>
 						</ul>
