--- a/Forum.html
+++ b/Forum.html
@@ -47,7 +47,7 @@
 											<p>VOUS POUVEZ POSER VOS QUESTION JUSTE ICI</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">POSER UNE QUESTION</a></li>
+													<li><a href="askQuestion.html" class="button">POSER UNE QUESTION</a></li>
 												</ul>
 											</footer>
 										</section>
@@ -58,7 +58,7 @@
 											<p>VOUS POUVEZ PARTAGER VOS MAP, VOS TECHNIQUES ET VOS EXPERIENCES DANS LE JEU</p>
 											<footer>
 												<ul class="actions">
-													<li><a href="#" class="button">PARTAGER!</a></li>
+													<li><a href="share.html" class="button">PARTAGER!</a></li>
 												</ul>
 											</footer>
 										</section>
