--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Enfin trois classes de personnages seront disponible pour être le plus imprévi
 						</header>
 						<p>Le défi est de réaliser un jeu à la hauteur de nos attentes : c'est à dire le plus fun possible. Pour cela le gameplay est primordial. Néanmoins le coté graphique ne doit pas être laissé pour compte!</p>
 						<ul class="actions">
-							<li><a href="#" class="button">REMONTER</a></li>
+							<li><a href="elements.html" class="button">GALERIE</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
