--- a/galerie.html
+++ b/galerie.html
@@ -1,4 +1,5 @@
-<!DOCTYPE HTML>
+
+		<!DOCTYPE HTML>
 <!--
 	Landed by HTML5 UP
 	html5up.net | @ajlkn
@@ -6,7 +7,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Landed by HTML5 UP</title>
+		<title>WORLD POWER FIGHTER BY TEAM 3AGOUNOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -14,21 +15,22 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	<body>
+	<body class="landing">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Landed</a></h1>
+					<h1 id="logo"><a href="index.html">TEAM 3AGOUNOS</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="Download.html">Download</a></li>
+							<li><a href="Forum.html">Forum</a></li>
+							<li><a href="index.html" class="button special">Home</a></li>
+<!--
 							<li>
 								<a href="#">Layouts</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="Download.html">Download</a></li>
 									<li>
 										<a href="#">Submenu</a>
 										<ul>
@@ -40,12 +42,11 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Elements</a></li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+-->
+
 						</ul>
 					</nav>
 				</header>
-
 			<!-- Main -->
 				<div id="main" class="wrapper style1">
 					<div class="container">
@@ -63,28 +64,26 @@
 								<div class="box alt">
 									<div class="row 50% uniform">
 										<div class="12u$"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-										<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="4u$ 6u(xsmall)"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-										<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-										<div class="4u$ 6u$(xsmall)"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-										<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-										<div class="4u$ 6u(xsmall)"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-										<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/1.PNG" alt="" /></span></div>
+										<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/2.PNG" alt="" /></span></div>
+										<div class="4u$ 6u(xsmall)"><span class="image fit"><img src="images/3.PNG" alt="" /></span></div>
+										<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/4.PNG" alt="" /></span></div>
+										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/5.PNG" alt="" /></span></div>
+										<div class="4u$ 6u$(xsmall)"><span class="image fit"><img src="images/6.PNG" alt="" /></span></div>
+										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/7.PNG" alt="" /></span></div>
+										<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/8.PNG" alt="" /></span></div>
+										<div class="4u$ 6u(xsmall)"><span class="image fit"><img src="images/9.PNG" alt="" /></span></div>
+										<div class="4u  6u$(xsmall)"><span class="image fit"><img src="images/lobby.png" alt="" /></span></div>
+										<div class="4u  6u(xsmall)"><span class="image fit"><img src="images/pic04.PNG" alt="" /></span></div>
 										<div class="4u$ 6u$(xsmall)"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
 									</div>
 								</div>
 
-								<h4>Left &amp; Right</h4>
-								<p><span class="image left"><img src="images/pic08.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Cras aliquet accumsan curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam. Cras aliquet accumsan curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam.</p>
-								<p><span class="image right"><img src="images/pic08.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Cras aliquet accumsan curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam. Cras aliquet accumsan curae accumsan arcu amet egestas placerat odio morbi mi adipiscing col morbi felis faucibus in gravida sollicitudin interdum commodo. Ante aliquam vis iaculis accumsan lorem ipsum dolor sit amet nullam.</p>
-							</section>
+								</section>
 
 					</div>
 				</div>
+
 
 			<!-- Footer -->
 				<footer id="footer">
@@ -97,7 +96,10 @@
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; WORLD POWER FIGHTER All rights reserved. TEAM 3AGOUNOS</li>
+						<!--
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						-->
 					</ul>
 				</footer>
 
